# sandbox

./: .gitignore  LICENSE  README.md
azure/python-blobstorage-example/: .env.example  README.md  compose.yaml  create_file.py  pyproject.toml
azure/python-function-example/: .gitignore  README.md  db.py  function_app.py  pyproject.toml
azure/python-webapp-example/: .env.example  .gitignore  README.md  deploy.sh  main.py  pyproject.toml  startup.sh
azure/speech-example/: .env.example  .gitignore  README.md  pyproject.toml
claude-agent-sdk-example/: main.py  pyproject.toml
coding-agent-example/: .env.example  README.md  graph.py  main.py  nodes.py  pyproject.toml  state.py  tools.py
fastapi-example/: Procfile  README.md  compose.yaml  mise.toml  pyproject.toml
fastapi-example/app/: background_task.py  main.py  reverse_proxy.py
hello-fastapi/: main.py  pyproject.toml  test_main.py
langchain-example/: .flake8  .gitignore  README.md  mypy.ini  pyproject.toml
langchain-example/notebooks/: document_loader.ipynb  langserve.ipynb  langserve_testclient.ipynb  openai.ipynb  runnable.ipynb  stream.ipynb
langchain-example/scripts/: callback.py  history-example.py  listener-example.py  server.py
langchain-example/tests/: fake_model_test.py  runnable_test.py  test_fake_model.py  test_runnable.py
langfuse-example/: .env.example  .gitignore  README.md  auth_check.py  evaluators.py  experiment_demo.py  geography_quiz.csv  main.py  mise.toml  pyproject.toml  run_experiment_demo.py
langgraph-example/: .gitignore  README.md  graph.md  pyproject.toml
langgraph-example/app/: __init__.py  app.py  chat.py  chat_with_tool.py  checkpoint.py  command.py  condition.py  draw_graph.py  example1.py  example2.py  example3.py  parallel.py  send.py  simple.py  subgraph.py
langgraph-example/static/: index.html  sse.js
langgraph-example/tests/: test_command.py  test_condition.py  test_helloworld.py  test_parallel.py  test_send.py  test_simple.py  test_subgraph.py
mlflow-example/: .gitignore  README.md  pyproject.toml
mlflow-example/app/: eval_with_ollama.py  eval_with_openai.py
prefect-example/: README.md  complex_parallel_flow.py  docker_example.py  exec_python_example.py  human_in_the_loop_example.py  main.py  parallel_example.py  pyproject.toml
pydantic-ai-example/: README.md  main.py  pyproject.toml
python-cosmosdb-example/: .env  .gitignore  Procfile  README.md  compose.yaml  core.py  create-container.py  create-items.py  delete-items.py  patch-items.py  pyproject.toml  query-items.py  upsert-items.py
python-cosmosdb-example/app/: __init__.py  core.py  create-container.py  create-items.py  create_container.py  create_items.py  delete-items.py  delete_items.py  demo.py  demo_datetime.py  patch-items.py  patch_items.py  query-items.py  query_items.py  repository_example.py  upsert-items.py  upsert_items.py
python-coverage-example/: pyproject.toml
python-coverage-example/app/: foobar.py
python-coverage-example/tests/: test_bar.py  test_foo.py
python-embedding/: .env.example  .flake8  .pylintrc  README.md  pyproject.toml
python-embedding/app/: aioutil.py  cache.py  calc_cost.py  embeddings.py  embeddings_client.py  import_cache.py  main.py
python-example/: .env  .gitignore  .tool-versions  README.md  alembic.ini  compose.yaml  main.py  otel-collector-config.yaml  pyproject.toml  ruff.toml
python-example/bisect_example/: main.py  rashomon.txt
python-example/data/: chinese_cuisine.csv  embeddings_sample.json  fruits.csv
python-example/hello-requests/: main.py  pyproject.toml
python-example/initdb/: init.sql
python-example/learn-python/: README.md  collection.ipynb  pyproject.toml
python-example/notebooks/: body_temperature.ipynb  collection.ipynb  cosmosdb.ipynb  cosmosdb_emulator.ipynb  csv.ipynb  datetime.ipynb  decorator.ipynb  iterator_generator.ipynb  json.ipynb  literal.ipynb  match.ipynb  mecab.ipynb  method_missing.ipynb  pandas_csv.ipynb  pandas_dataframe.ipynb  pandas_series.ipynb  pandas_visualize.ipynb  plantuml.ipynb  postgres.ipynb  pydantic.ipynb  refrection.ipynb  sqlite.ipynb  tqdm.ipynb  with.ipynb
python-example/python-sandbox/: .env  README.md  pyproject.toml
python-example/scripts/: aio_example.py  duckdb_example.py  fastapi-downloadfile-example.py  fastapi-model-example.py  fastapi-pathparameter-example.py  fastapi-uploadfile-example.py  hash-example.py  lambda_calculus.py  pandas_visualize.py  server.py  struct_example.py  tqdm_example.py  type_annotation.py  type_error.py  ulid-example.py  verify_error.py
python-example/tests/: test_example.py
python-logging-example/: .env  README.md  pyproject.toml
python-logging-example/app/: main.py
python-openai-example/: .gitignore  pyproject.toml
python-openai-example/app/: calc_cost.py  embeddings_example.py  image_example.py  models.py
python-openai-example/data/: gitlog.txt
python-opentelemetry-example/: .env.local  .flake8  .gitignore  .pylintrc  README.md  pyproject.toml
python-opentelemetry-example/app/: __init__.py  chat.py  distributed.py  main.py
python-opentelemetry-example/python-opentelemetry-example-fastapi/: .env.local  README.md  pyproject.toml
python-opentelemetry-example/python-opentelemetry-example-simple/: .env  logs.py  main.py  metrics.py  pyproject.toml  tracing.py
python-playwright-example/: README.md  helloworld.py  pyproject.toml
python-pymupdf-example/: pyproject.toml
python-pymupdf-example/app/: export_image.py
python-selenium-docker-example/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
python-selenium-example/: .gitignore  README.md  pyproject.toml
streamlit-example/: README.md  args.py  chart.py  chat-example.py  make_example_data.py  multipage-example.py  navigation-example.py  pandas-example.py  pyproject.toml  response_time.py  sql-connection-example.py  vega-altair-example.py
toylang/: README.md  pyproject.toml
toylang/toylang/: ast.py  (+1 more)
vectorizer/: .gitignore  README.md  compose.yaml  main.py  pyproject.toml  settings.py  valkey_store.py
wandb-weave-example/: .env.example  README.md  pyproject.toml
(+2359 files in other folders)
