[tool.poetry]
name = "hello-fastapi"
version = "0.1.0"
description = ""
authors = ["Uragami Taichi <backpaper0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
taskipy = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
serve = "uvicorn main:app --reload"
verify = "mypy main.py"
test = "python -m unittest test_*.py"