[tool.poetry]
name = "langchain-example"
version = "0.1.0"
description = ""
authors = ["Uragami Taichi <backpaper0@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
langserve = {extras = ["all"], version = "^0.3.1"}
faiss-cpu = "^1.10.0"
python-dotenv = "^1.0.1"
jupyter = "^1.1.1"
pandas = "^2.2.3"
pypdf = "^5.3.1"
sqlalchemy = "^2.0.38"
aiosqlite = "^0.21.0"
langchain-openai = "^0.3.8"
langchain-community = "^0.3.19"
python-ulid = "^3.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "ruff format"
