[project]
name = "langfuse-example"
version = "0.1.0"
description = "Langfuse example"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain[openai]>=1.2.10",
    "langfuse>=3.14.5",
    "langgraph>=1.0.10",
    "numpy>=2.4.2",
    "openai>=2.26.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "ty>=0.0.21",
]
