[tool.poetry]
name = "langgraph-example"
version = "0.1.0"
description = ""
authors = ["Uragami Taichi <backpaper0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.3.5"
grandalf = "^0.8"
langserve = {extras = ["server"], version = "^0.3.1"}
langchain-ollama = "^0.2.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.10"
pyright = "^1.1.396"
taskipy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "ruff format"
lint = "ruff check && pyright"
fix = "ruff format && ruff check --fix && pyright"
test = "python -m unittest discover"
graph = "python -m app.draw_graph"
chat = "python -m app.chat"