[project]
name = "demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Uragami Taichi",email = "backpaper0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "mlflow[genai] (>=2.21.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "openai (>=1.68.2,<2.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "tenacity (>=9.0.0,<10.0.0)",
    "aiohttp (>=3.11.14,<4.0.0)",
    "langchain-ollama (>=0.3.0,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
ruff = "^0.11.1"
pyright = "^1.1.397"
pandas-stubs = "^2.2.3.250308"

[tool.taskipy.tasks]
fix = "ruff format && ruff check --fix && pyright"