[project]
name = "prefect-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "prefect[shell]>=3.3.4",
    "pydantic>=2.11.3",
]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
prefect = "prefect server start"
main = "python -m main"
fix = "uvx ruff format && uvx ruff check --fix && uvx pyright"
