[project]
name = "prefect-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "prefect>=3.4.23",
    "pydantic>=2.12.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "taskipy>=1.14.1",
    "ty>=0.0.1a22",
]

[tool.taskipy.tasks]
prefect = "prefect server start"
fix = "ruff format && ruff check --select I --fix && ruff check --fix"
check = "ruff format --check && ruff check --select I && ruff check && ty check"
