[tool.poetry]
name = "python-cosmosdb-example"
version = "0.1.0"
description = ""
authors = ["Uragami Taichi <backpaper0@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
azure-cosmos = "^4.9.0"
aiohttp = "^3.11.11"
opentelemetry-api = "^1.29.0"
opentelemetry-sdk = "^1.29.0"
opentelemetry-instrumentation-aiohttp-client = "^0.50b0"
opentelemetry-exporter-otlp = "^1.29.0"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.1"
python-ulid = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
