[project]
name = "python-cosmosdb-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "azure-cosmos>=4.9.0",
    "opentelemetry-api>=1.37.0",
    "opentelemetry-exporter-otlp>=1.37.0",
    "opentelemetry-instrumentation-aiohttp-client>=0.58b0",
    "opentelemetry-sdk>=1.37.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "python-ulid>=3.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
    "taskipy>=1.14.1",
    "ty>=0.0.1a21",
]

[tool.taskipy.tasks]
check = "ruff format --check && ruff check && ruff check --select I && ty"
fix = "ruff format && ruff check --fix && ruff check --select I --fix"
