[tool.poetry]
name = "python-example"
version = "0.1.0"
description = ""
authors = ["Uragami Taichi <backpaper0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
jupyter = "^1.0.0"
pandas = "^2.2.0"
matplotlib = "^3.8.3"
azure-cosmos = "^4.5.1"
mypy = "^1.8.0"
pandas-stubs = "^2.2.0.240218"
iplantuml = "^0.1.1"
tqdm = "^4.66.2"
psycopg-pool = "^3.2.1"
psycopg-binary = "^3.1.18"
sqlalchemy = "^2.0.28"
aiosqlite = "^0.20.0"
mecab-python3 = "^1.0.8"
ipadic = "^1.0.0"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.1"}
opentelemetry-api = "^1.23.0"
opentelemetry-sdk = "^1.23.0"
opentelemetry-instrumentation-fastapi = "^0.44b0"
pydantic = "^2.6.4"
opentelemetry-exporter-otlp-proto-http = "^1.23.0"
duckdb = "^1.0.0"
python-ulid = "^2.6.0"


[tool.poetry.group.dev.dependencies]
pandas = "^2.2.0"
taskipy = "^1.12.2"
nbconvert = "^7.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
verify = "poetry run mypy scripts/verify_error.py"
test = "poetry run python -m unittest -v scripts/test_*.py"
serve = "PYTHONPATH=scripts:$PYTHONPATH uvicorn server:app --reload"
request = "while true; do curl -w '\n' localhost:8000/rolldice; sleep 1; curl -w '\n' localhost:8000/rolldice -G -d player=demouser; sleep 1; done"