[project]
name = "python-example"
version = "0.1.0"
description = "Python example"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.15.2",
    "azure-cosmos>=4.9.0",
    "duckdb>=1.2.2",
    "fastapi>=0.115.12",
    "ipadic>=1.0.0",
    "iplantuml>=0.1.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "mecab-python3>=1.0.10",
    "mypy>=1.15.0",
    "opentelemetry-api>=1.32.0",
    "opentelemetry-exporter-otlp-proto-http>=1.32.0",
    "opentelemetry-instrumentation-fastapi>=0.53b0",
    "opentelemetry-sdk>=1.32.0",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.250308",
    "psycopg-binary>=3.2.6",
    "psycopg-pool>=3.2.6",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "python-ulid>=3.0.0",
    "sqlalchemy>=2.0.40",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "nbconvert>=7.16.6",
    "pandas>=2.2.3",
    "ruff>=0.11.5",
    "taskipy>=1.14.1",
    "types-aiofiles>=24.1.0.20250326",
    "types-tqdm>=4.67.0.20250404",
]

[tool.taskipy.tasks]
check-type = "uvx pyright scripts/type_error.py"
test = "python -m unittest -v tests/test_*.py"
serve = "PYTHONPATH=scripts:$PYTHONPATH uvicorn server:app --reload"
request = "while true; do curl -w '\n' localhost:8000/rolldice; sleep 1; curl -w '\n' localhost:8000/rolldice -G -d player=demouser; sleep 1; done"