[project]
name = "python-example"
version = "0.1.0"
description = "Python example"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "azure-cosmos>=4.14.2",
    "duckdb>=1.4.2",
    "fastapi>=0.123.5",
    "ipadic>=1.0.0",
    "iplantuml>=0.1.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "mecab-python3>=1.0.12",
    "mypy>=1.19.0",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-exporter-otlp-proto-http>=1.38.0",
    "opentelemetry-instrumentation-fastapi>=0.59b0",
    "opentelemetry-sdk>=1.38.0",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251201",
    "psycopg-binary>=3.3.1",
    "psycopg-pool>=3.3.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "python-ulid>=3.1.0",
    "sqlalchemy>=2.0.44",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "nbconvert>=7.16.6",
    "pandas>=2.3.3",
    "ruff>=0.14.7",
    "taskipy>=1.14.1",
    "types-aiofiles>=25.1.0.20251011",
    "types-tqdm>=4.67.0.20250809",
]

[tool.taskipy.tasks]
check-type = "uvx pyright scripts/type_error.py"
test = "python -m unittest -v tests/test_*.py"
serve = "PYTHONPATH=scripts:$PYTHONPATH uvicorn server:app --reload"
request = "while true; do curl -w '\n' localhost:8000/rolldice; sleep 1; curl -w '\n' localhost:8000/rolldice -G -d player=demouser; sleep 1; done"
