[project]
name = "python-selenium-docker-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.11.0",
    "selenium>=4.36.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
    "taskipy>=1.14.1",
    "ty>=0.0.1a23",
]

[tool.taskipy.tasks]
check = "ruff format --check && ruff check && ty check"
fix = "ruff format && ruff check --select I --fix && ruff check --fix"
