[tool.poetry]
name = "streamlit-example"
version = "0.1.0"
description = ""
authors = ["Uragami Taichi <backpaper0@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.37.0"
pandas = "^2.2.2"
langchain = "^0.2.5"
openai = "^1.35.3"
sqlalchemy = "^2.0.31"
aiosqlite = "^0.20.0"
vega-datasets = "^0.9.0"
matplotlib = "^3.9.1"
plotly = "^5.22.0"
scipy = "^1.14.0"
bokeh = "^3.5.0"
pydeck = "^0.9.1"
altair = "^5.3.0"
graphviz = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
