[project]
name = "streamlit-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "altair>=5.5.0",
    "bokeh>=3.8.0",
    "graphviz>=0.21",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.33",
    "matplotlib>=3.10.6",
    "openai>=1.107.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pydeck>=0.9.1",
    "scipy>=1.16.2",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
    "vega-datasets>=0.9.0",
]
