[project]
name = "vectorizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.18",
    "langchain-openai>=0.3.14",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "tqdm>=4.67.1",
]
