[tool.poetry]
name = "python-function-example"
version = "0.1.0"
description = ""
authors = ["Uragami Taichi <backpaper0@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
azure-functions = "^1.20.0"


[tool.poetry.group.dev.dependencies]
azure-cosmos = "^4.7.0"
taskipy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
db = "python -m db"
